--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -19,6 +19,9 @@
                      <li><a href="{{ "reading-material" | absLangURL }}">{{ .Site.Params.navbar.ReadingMaterial }}</a></li>
                    </ul>
                </div>
+               <li class="nav-item">
+                     <a class="nav-link" href="{{ "arete-fellowship" | absLangURL }}">{{ .Site.Params.navbar.AreteFellowship }} </a>
+                </li>
                 <li class="nav-item">
                      <a class="nav-link" href="{{ "faq" | absLangURL }}">{{ .Site.Params.navbar.Faq }} </a>
                 </li>
